--- a/2025-08-19_기술면접_예상질문_50선.md
+++ b/2025-08-19_기술면접_예상질문_50선.md
@@ -1,255 +1,196 @@
-# 💬 기술면접 예상 질문 50선 정리
-
-📅 2025-08-19  
-📚 출처: FastCampus AI Bootcamp (Upstage Track)
-
----
-
-## 🧩 머리말
-지난 일주일 동안 AI 부트캠프에서 컴퓨터활용능력 관련 온라인 수업을 들었다.  
-마지막 수업에서 기술 면접에서 나올 수 있는 예상 질문 50가지를 공부한 바,  
-이후에 기술 면접에 대비하여 메모한 이론적 내용을 글로 정리하고자 한다.
-
----
-
-## 🧠 사전 지식
-**기술 면접**이란 개발자 채용 과정에서 지원자의 기술적 역량을 평가하는 면접 유형이다.  
-면접관은 지원자가 특정 기술 분야에 대한 지식, 문제 해결 능력, 코드 작성 능력을 갖추고 있는지 확인한다.  
-이를 통해 회사는 실제 업무에 필요한 기술을 갖춘 인재를 선발할 수 있다.  
-
-**기술적 질문 범위**
-- 알고리즘 / 자료구조  
-- 시스템 디자인  
-- 특정 프로그래밍 언어 및 프레임워크  
-- 실무 경험 및 문제 해결력  
+﻿
+<머리말>
 
----
-
-# 🖥️ (1) 컴퓨터 구조 & 운영체제
+지난 일주일 동안 Ai 부트캠프에서 컴퓨터활용능력 관련 온라인 수업을 들었다. 마지막 수업에서 기술 면접에서 나올 수 있는 예상 질문 50가지를 공부한 바, 이후에 기술 면접에 대비하여 메모한 이론적 내용을 글로 정리하고자 한다.
 
-### 1. 프로세스의 정의
-프로세스는 실행 중인 프로그램을 의미하며, **운영체제의 실행 단위**이다.  
-프로세스는 독립된 메모리 공간(코드, 데이터, 스택, 힙)을 가지며 PCB를 통해 관리된다.
-
-### 2. 스레드란?
-프로세스 내의 **작업 단위**로, 같은 프로세스 내의 다른 스레드와 자원을 공유한다.
-
-### 3. 커널이란?
-운영체제의 핵심으로, **자원 보호 및 프로세스 관리**를 담당한다.  
-페이징, 파일 시스템 관리 등도 수행한다.  
-> 커널에 속하지 않은 OS 구성요소: UI
-
-### 4. 프로세스가 입출력 작업을 만나면?
-1. 시스템 콜로 입출력 요청  
-2. 대기 상태로 전환  
-3. 입출력 수행  
-4. 완료 후 준비 상태로 전환  
-5. CPU 재할당 후 실행 재개
-
-### 5. CPU 스케줄링이란?
-여러 프로세스에 CPU를 **효율적으로 배분**하는 운영체제의 핵심 기능.  
-→ **FCFS, SJF, RR, Priority, Multilevel Queue** 등 알고리즘이 존재.
-
-### 6. 부팅 과정
-전원 인가 → BIOS 실행 → 부트로더 실행 → OS 로드 → 초기화 및 로그인
-
-### 7. 페이징
-메모리를 **페이지 단위로 분리**하여 관리하는 가상 메모리 기법.  
-외부 단편화를 제거하고 프로세스 간 메모리 격리 가능.
-
-### 8. 메모리가 크면?
-동시 실행 프로세스 수 증가 → **멀티태스킹 능력 향상**
-
-### 9. 시스템 콜
-사용자 프로그램이 **커널 기능을 요청**할 수 있는 인터페이스.  
-자원 접근은 반드시 시스템 콜을 통해야 한다.
 
-### 10. 스레싱
-페이지 폴트 과다로 CPU가 대부분의 시간을 페이지 교체에 소모하는 현상.  
-→ **해결:** 물리 메모리 확장, 프로세스 수 조정, 교체 알고리즘 개선.
+<사전 지식>
 
-### 11. 파일 시스템
-파일 및 디렉터리를 관리하는 커널의 일부.  
-예: FAT, NTFS, APFS 등
-
-### 12. 커널의 입출력 인터럽트 처리
-1. 인터럽트 발생  
-2. 상태 저장  
-3. ISR(서비스 루틴) 호출 및 수행  
-4. 상태 복원  
-5. 재실행
+기술 면접이란 개발자 채용 과정에서 지원자의 기술적 역량을 평가하는 면접 유형이다. 면접관은 지원자가 특정 기술 분야에 대한 지식, 문제 해결 능력, 코드 작성 능력 등을 갖추고 있는지 확인한다. 이를 통해 회사는 실제 업무에 필요한 기술을 갖춘 인재를 선발할 수 있다. 기술적 질문, 코딩 테스트, 실무 경험 질문, 기술적 토론이 이에 해당한다. 기술적 질문으로는 알고리즘, 자료구조, 시스템 디자인, 특정 프로그래밍 언어 및 프레임워크 등에 대한 질문이 있다.(출처: 구글 제미나이)
 
-### 13. 명령어 병렬 처리 기법
-프로세서 성능 향상을 위한 기술.  
-대표적: **파이프라이닝, 슈퍼스칼라, OOOE**
 
-### 14. RAID
-여러 디스크를 하나처럼 구성하여 **성능·안정성**을 높이는 기술.  
-| 종류 | 특징 |
-|------|------|
-| RAID 0 | 스트라이핑, 빠름, 복구 불가 |
-| RAID 1 | 미러링, 안정성 높음, 용량 절반 |
-| RAID 5 | 패리티 분산, 성능+안정성 |
-| RAID 6 | 패리티 2개, 안정성 최고 |
+<본론>
 
-### 15. 레이스 컨디션과 동기화
-여러 프로세스가 공유 자원에 동시에 접근할 때 발생하는 문제.  
-→ **뮤텍스, 세마포어**를 이용해 동기화로 해결.
+(1) 컴퓨터 구조 & 운영체제
 
-### 16. 파일 디스크립터
-운영체제에서 **파일을 식별하는 정수값**.
+1. 프로세스의 정의를 설명하세요.
+프로세스는 실행 중인 프로그램을 의미하는 운영체제의 실행 단위로, 보조기억장치에 저장된 프로그램이 실행되면 생성됩니다. 프로세스는 PCB를 부여받고, 상태를 가지며, 메모리 상에 코드, 데이터, 스택, 힙 영역을 포함하는 독립적인 메모리 공간을 할당받습니다.
 
-### 17. 소켓
-네트워크 프로세스 간 **데이터 송수신 인터페이스**.  
-TCP(연결형), UDP(비연결형).
+2. 스레드는 무엇인가요
+프로세스 내의 작업단위이다. 일반적으로 한 프로세스는 여러 개의 스레드를 가질 수 있으며, 스레드는 프로세스 내의 자원과 데이터를 공유한다.
 
-### 18. 하드 링크 vs 소프트 링크
-| 구분 | 특징 |
-|------|------|
-| 하드링크 | 동일한 inode 공유, 원본 삭제 시 유효 |
-| 소프트링크 | 다른 inode, 원본 삭제 시 무효화 |
+3. 커널은 무엇인가요
+운영체제의 핵심 서비스를 담당하는 한 부분으로써, 하드웨어를 비롯한 자원을 보호하고 프로세스에 할당되며, 여러 프로세스의 실행 순서를 제어하고 통신을 돕는 등 프로세스의 실행을 관리합니다. 또한 페이징 등의 가상 메모리 기법을 통해 물리 메모리를 논리적인 단위로 관리하고, 파일 시스템을 통해 파일과 디렉터리를 관리하는 등의 역할을 수행합니다.
++ 커널에 속해있지 않은 운영체제는? : UI
 
-### 19. 메모리 매핑
-파일을 특정 메모리 영역과 연결하는 기법.  
-→ **IPC(프로세스 간 통신)** 용도로 사용.
+4. 프로세스가 CPU를 활용하다가 입출력 작업을 만나면 어떻게 되나요?
+① 시스템 콜을 통한 입출력 요청
+② 프로세스 상태가 대기 상태로 변경(다른 프로세스가 실행될 기회를 얻게 됨)
+③ 입출력 작업 수행
+④ 완료 및 준비 상태로 전환
+⑤ CPU획득 및 실행 재개
 
-### 20. 시그널
-프로세스 간 비동기 이벤트 전달 메커니즘.  
-예: SIGINT, SIGKILL
+5. CPU 스케줄링이란 무엇인가요?
+운영체제가 여러 프로세스 사이에서 CPU 자원을 효율적으로 할당하고 관리하는 작업을 의미합니다. CPU 스케줄링 알고리즘을 통해 다중 프로세스 환경에서 CPU 사용을 조절하여 다양한 프로세스가 공정하게 실행되도록 하는 역할을 합니다.
++ CPU 스케줄링 알고리즘 중 아는 것이 있나요? : 이론적 알고리즘과 실제 알고리즘 비교하기
 
----
+6. 부팅이 무엇인가요? 부팅의 과정을 서술하세요.
+부팅이란 컴퓨터를 시작하고 운영체제를 로드하는 과정을 의미합니다. 일반적인 부팅과정은 전원 인가 - BIOS 시작 - 부트 로더 시작 - 운영체제 적재 - 운영체제 초기화 및 사용자 로그인의 과정으로 진행된다.
 
-# 🌐 (2) 네트워크
+7. 페이징은 무엇이며, 존재 이유는 무엇인가요?
+페이징은 가상 메모리 관리 기술 중 하나로, 물리 주소를 프레임, 논리 주소를 페이지 단위로 분리하여 메모리를 관리하는 방법이다. 페이징을 통해 외부 단편화를 제거할 수 있고, 프로세스 간 메모리 공간을 격리할 수 있게 됩니다.
 
-### 21. OSI 7계층
-물리 → 데이터링크 → 네트워크 → 전송 → 세션 → 표현 → 응용  
-각 계층은 독립적으로 기능 수행.
+8. 메모리가 크면 무엇이 좋은가요?
+동시 실행 가능한 프로세스 수가 많아지기 떄문에 프로그램 실행 속도, 멀티 태스킹 능력이 향상됩니다.
 
-### 22. TCP vs UDP
-| 구분 | TCP | UDP |
-|------|-----|-----|
-| 연결성 | 연결지향 | 비연결 |
-| 신뢰성 | 높음 | 낮음 |
-| 순서보장 | O | X |
-| 속도 | 느림 | 빠름 |
+9. 시스템 콜은 무엇이며, 존재 이유는 무엇인가요?
+운영 체제의 커널이 제공하는 서비스를 응용 프로그램이 사용할 수 있도록 하는 인터페이스입니다. 시스템 콜이 존재하는 이유는 사용자 프로그램은 자원에 직접 접근할 수 없기 때문입니다. 하드웨어를 비롯한 자원에 접근하기 위해 사용하고 프로세스 간의 통신을 비롯한 프로세스 관리를 위해 시스템 콜을 호출합니다.
 
-### 23. ARP
-IP ↔ MAC 주소 변환 프로토콜.
+10. 스레싱은 무엇이며, 어떻게 해결할 수 있을까요
+스레싱은 컴퓨터 시스템에서 발생하는 문제 상황으로, 지나치게 많은 페이지 폴트로 인해 대부분의 시간을 페이지 교체 작업으로 소비하게 되는 현상을 나타냅니다. 스레싱이 발생하면 시스템 성능이 급격히 저하됩니다. 스레싱 해결을 위해 물리 메모리 크기를 확장하거나, 페이지 교체 알고리즘을 변경하거나, 동시 실행중인 프로세스의 수를 줄이거나, 프로세스 우선순위를 조정하는 방식을 선택할 수 있습니다.
 
-### 24. TCP 연결 수립 (3-Way Handshake)
-1. SYN  
-2. SYN+ACK  
-3. ACK
+11. 파일 시스템의 정의와 종류를 아는 대로 설명하세요.
+파일 및 디렉터리를 관리하는 커널의 한 부분입니다. 데이터를 파일과 디렉터리로 저장하고 조직화하는 역할을 담당하여 어플리케이션이 해당 데이터에 접근할 수 있도록 합니다. 대표적으로 USB 메모리 등에서 사용되는 FAF 파일 시스템, 윈도우에서 사용되는 NTFS, macOS에서 주로 사용되는 APFS 등이 있다.
 
-### 25. 서브넷 마스크
-IP 주소를 **네트워크/호스트 구간으로 분리**.
+12. 커널이 입출력 인터럽트를 처리하는 과정을 설명하세요(매우 중요!)
+① 인터럽트 발생
+② 현재 상태 저장
+③ 인터럽트 서비스 루틴 호출
+④ 인터럽트 서비스 루틴 수행
+⑤ 현재 상태 복원
+⑥ 프로세스 스케줄링 순으로 진행된다.
 
-### 26. 쿠키
-클라이언트 상태 정보를 저장하여 **세션 관리**에 활용.
+13. 명령어 병렬 처리 기법은 무엇이며 대표적인 종류에는 어떤 것이 있나요
+프로세서의 성능을 향상시키기 위해 여러 명령어가 병렬로 처리되는 기술입니다. 즉 하나의 명령어가 실행 중에 다른 명령어와 함께 독립적으로 실행될 수 있습니다. 대표적으로 파이프라이닝, 슈퍼스칼라 등이 있습니다. (OOOE 포함)
 
-### 27. DNS 리졸빙 과정
-캐시 → 로컬 DNS → 루트 → TLD → 권한 서버 → IP 반환
+14. RAID란 무엇인가요? 종류를 아는 대로 설명하세요.
+여러 개의 디스크를 하나의 논리적 디스크처럼 구성하여 성능, 용량, 안정성을 향상시키는 기술입니다. RAID 0은 데이터를 여러 디스크에 분산하여 저장하여 성능을 향상시키는 방식입니다. 단, 디스크가 하나라도 고장나면 전체 데이터가 손실됩니다. RAID 1은 데이터를 두 개의 디스크에 완전히 복제하여 안정성을 향상시키는 방식입니다. 단, 디스크 용량이 절반으로 줄어듭니다. RAID 5는 데이터와 패리티 정보를 여러 디스크에 분산하여 저장하여 성능과 안정성을 향상시키는 방식입니다. RAID 6은 RAID 5에 패리티 정보를 하나 더 추가하여 안정성을 더욱 향상시킨 방식입니다. 디스크가 두 개까지 고장나도 데이터를 복구할 수 있습니다.
 
-### 28. 리다이렉션
-요청 자원을 다른 경로로 이동시키는 응답.
+15. 운영체제 관점에서 레이스 컨디션과 동기화의 관계를 설명해보세요(중요)
+운영체제 관점에서 레이스 컨디션과 동기화는 서로 밀접한 관계에 있습니다. 레이스 컨디션은 여러 프로세스 또는 스레드가 공유 자원에 동시에 접근할 때 발생할 수 있는 문제입니다. 동기화는 프로세스 또는 스레드가 공유 자원에 접근할 때 충돌을 방지하기 위한 방법으로, 뮤텍스, 세마포어 등의 동기화를 통해 레이스 컨디션을 방지할 수 있습니다.
 
-### 29. HTTP 오류 코드
-- **400대:** 클라이언트 오류  
-- **500대:** 서버 오류  
+16. 파일 디스크립터란 무엇인가요?
+운영체제에서 파일을 식별하는데 정수 값입니다. 파일을 열면 운영체제는 프로세스에 파일 디스크립터를 할당합니다. 프로세스는 파일 디스크립터를 사용하여 파일 입출력에 대한 작업을 수행할 수 있습니다.
 
-### 30. 포트와 웰노운 포트
-0~1023번: **표준 프로토콜 포트**
+17. 소켓이란 무엇인가요?(중요)
+소켓은 컴퓨터 네트워크에서 프로세스 간에 데이터를 주고받기 위한 인터페이스입니다. 소켓은 프로세스가 네트워크를 통해 다른 프로세스에 연결하고, 데이터를 전송하고, 데이터를 수신할 수 있도록 합니다. 유닉스 체계 운영체제에서는 이는 파일과 같이 간주되며, UDP를 사용하는 비연결형 소켓과 TCP를 사용하는 연결형 소켓이 있습니다.
 
-### 31. ICMP
-네트워크 오류 보고 및 진단용 (ping 명령어).
+18. 하드 링크와 소프트 링크의 차이를 설명하세요.
+하드링크는 동일한 인코드를 공유하는 파일입니다. 하드링크는 원본 파일을 삭제하지 않는 한 항상 유효합니다. 소프트링크란 다른 인코드를 가진 파일입니다. 소프트링크는 원본 파일이 삭제되면 사용할 수 없습니다. 원본 파일의 경로가 변경되거나 삭제되더라도 소프트링크는 무효화됩니다.
 
-### 32. 혼잡 제어
-TCP는 **느린 시작(Slow Start)**, **혼잡 회피(CA)** 등 알고리즘을 통해 혼잡 방지.
+19. 메모리 매핑이란 무엇이며, 왜 사용하나요?
+메모리 매핑은 메모리와 보조 저장장치 간의 데이터 전송 및 공유를 위한 기술입니다. 그리고 파일 메모리 매핑은 메모리 매핑을 사용하여 특정 메모리 영역에 파일을 대응시키는 과정을 의미합니다. 이는 프로세스 간의 통신을 위해 주로 사용됩니다. 한 프로세스는 메모리 매핑 된 파일에 씀으로써 데이터를 공유하고, 다른 프로세스가 해당 데이터에 읽음으로써 통신이 가능합니다.
 
-### 33. 인터넷이 안 될 때 대처 순서
-1. 물리 연결 확인  
-2. 방화벽 확인  
-3. 재부팅  
-4. 외부 연결 테스트 (ping 8.8.8.8)  
-5. 내부 연결 테스트 (ping 라우터)
+20. 시그널이란 무엇이며, 그 예시를 설명하세요.
+시그널이란 소프트웨어 인터럽트의 일종으로, 프로세스에게 특정 이벤트가 발생했음을 알리는 수단입니다. 이는 프로세스 간 통신, 예외 처리, 비동기 이벤트 처리, 프로세스 종료 및 다른 상황에서 사용됩니다. 예시로는 SIGINT, SIGKILL이 있다.
 
-### 34. 트래픽 과부하 시 대응
-로드밸런서, 오토스케일링, 캐시, DB 이중화.
 
-### 35. HTTP 캐시 검증
-- `If-None-Match` (ETag)
-- `If-Modified-Since` (Last-Modified)
+(2) 네트워크
 
-### 36. Keep-Alive
-하나의 TCP 연결로 여러 요청을 처리.
+21. OSI 7계층에 대해 설명하세요.
+네트워크의 통신을 7개의 계층으로 나누어, 각 계층이 수행하는 역할과 기능을 정의한 ISO의 모델입니다. 물리 계층은 전기적, 광학적 신호를 사용하여 데이터를 전송하는 계층입니다. 데이터를 0과 1로 이루어진 비트로 변환하고, 이를 물리적인 매체를 통해 전송합니다. 데이터 링크 계층은 데이터의 오류를 검출하고 수정하는 계층입니다. 프레임이라는 단위로 데이터를 묶어서 전송하고, 수신 측에서는 프레임을 분해하여 데이터를 추출합니다. 네트워크 계층은 데이터를 목적지에 전달하는 계층입니다. IP 주소를 사용하여 데이터를 목적지까지 전달하는 경로를 결정합니다. 전송계층은 데이터를 신뢰성 있게 전달하는 계층입니다. 세션 계층은 데이터 전송의 시작과 종료에 관여하는 세션을 관리하는 계층입니다. 표현 계층은 데이터 형식을 변환하는 계층입니다. 서로 다른 컴퓨터 시스템 간의 데이터 형식 차이를 해결합니다. 응용 계층 사용자의 요구를 처리하는 계층입니다. 웹 브라우저, 이메일, 파일 전송 등 다양한 네트워크 응용 프로그램을 지원합니다.
 
-### 37. IPv4 → IPv6
-IPv4 주소 부족 → 128bit 주소 IPv6 도입.  
-(사설망/공유기 사용 덕에 IPv4 여전히 널리 사용 중)
+22. TCP와 UDP의 차이를 설명하세요.
+TCP는 신뢰할 수 있는 연결 프로토콜입니다. 데이터가 올바르게 전송되었는지 확인하기 위해 연결을 설정하고 유지합니다. 이는 데이터의 순서를 보장하고, 손상된 데이터를 감지하고 수정하며, 패킷이 손상되지 않도록 보장합니다. 이러한 기능으로 인해 TCP는 대용량 데이터 전송이나 신뢰성이 중요한 응용 프로그램에 적합합니다.
+UDP는 비연결 프로토콜입니다. 데이터를 전송하기 위해 연결을 설정하지 않습니다. UDP는 TCP보다 효율적이지만 신뢰성은 떨어집니다. UDP는 데이터의 순서를 보장하지 않으며, 손상된 데이터를 감지하거나 수정하지 않습니다. 또한 패킷이 손실될 수 있습니다. 이러한 특성으로 인해 UDP는 대용량 데이터 전송이나 신뢰성이 중요하지 않은 응용프로그램에 적합합니다.
 
-### 38. UDP가 TCP보다 빠른 이유
-연결 설정, 순서보장, 오류검증 과정이 없음.
+23. ARP는 무엇이며, 왜 사용되나요? (중요)
+네트워크 게층의 논리 주소인 IP주소와 데이터 링크 계층의 물리 주소인 간의 대응을 위해 사용하는 프로토콜입니다. 상대 호스트의 IP 주소를 알지만 MAC 주소를 모르는 경우 ARP를 통해 알아낼 수 있습니다.
 
-### 39. 쿠키 보안 강화 방법
-- `Secure` 플래그 (HTTPS만)
-- `HttpOnly` 플래그 (JS 접근 차단)
+24. TCP의 연결 수립 과정을 설명해보세요.
+쓰리 웨이 핸드셰이크를 통해 연결이 수립됩니다.
+① 클라이언트가 서버에 연결을 요청합니다.: SYN 플래그가 활성화된 세그먼트를 전송합니다.
+② 서버가 이에 응답합니다.: SYN + ACK 플래그가 활성화된 세그먼트를 전송합니다.
+③ 클라이언트가 이에 응답합니다: ACK 플래그가 활성화된 세그먼트를 전송합니다.
 
-### 40. PUT vs PATCH
-| 메서드 | 의미 |
-|--------|------|
-| PUT | 전체 대체 |
-| PATCH | 일부 수정 |
+25. 서브넷 마스크란 무엇인가요? 예를 들어 192.168.1.100의 서브넷 마스크가 255.255.255.0라는 말의 의미는 무엇인가요?
+서브넷 마스크는 IP 주소의 네트워크 부분과 호스트 부분을 구분하는데 사용되는 32bit의 숫자입니다. 서브넷 마스크는 2진수로 표시되며, 1은 네트워크 부분을 나타내고 0은 호스트 부분을 나타냅니다. 예시의 경우 IP 주소의 네트워크 부분이 192.168.1이고 호스트 부분이 100임을 나타냅니다.
 
----
+26. 쿠키는 무엇이고 어디에 (왜) 사용되나요?
+쿠키는 클라이언트의 상태를 짐작하기 위해 서버가 생성하고 클라이언트가 저장하는 정보입니다. HTTP는 기본적으로 상태를 유지하지 않는 프로토콜이기 때문에 서버는 클라이언트의 상태를 알 수 없지만, 쿠키를 이용하면 클라이언트의 상태(로그인 정보 등)을 알 수 있게 됩니다. 서버는 Set-Cookie 헤더로 클라이언트에 쿠키를 전달하고 클라이언트는 Cookie 헤더로 서버에 쿠키를 전달할 수 있습니다.
 
-# 🗄️ (3) 데이터베이스
+27. www.example.com이라는 도메인이 리졸빙되는 과정을 설명하세요.(중요)
+① 캐시에 있는지 먼저 확인(있다면 캐시된 데이터 확인)
+② 로컬 DNS 서버 -> 루트 DNS 서버
+③ 루트 DNS 서버 -> TLD 서버
+④ TLD 서버 -> authoritative 서버
+⑤ authoritative 서버를 통해 www.example.com의 IP 주소를 알았다면 로컬 DNS 서버에 전달
+세부적인 과정은 재귀적 질의, 반복적 질의에 따라 다를 수 있음.
 
-### 41. RDBMS vs NoSQL
-RDBMS: 정형 데이터, SQL 기반  
-NoSQL: 비정형 데이터, 유연한 스키마
+28. 리다이렉션은 무엇이며, 왜 사용하나요?
+클라이언트가 요청된 자원이 다른 곳에 있음을 알리는 응답으로, 웹 사이트가 재구성되거나 URL이 변경되었을 때, URL을 간소화해야 할 때, 클라이언트의 페이지를 임시 URL로 이동해야 할 때 사용됩니다. 또 캐시된 데이터를 사용 가능한지 여부를 알려주기도 합니다(304)
 
-### 42. 트랜잭션의 원자성
-**모두 성공 or 모두 실패** → 데이터 일관성 유지
+29. HTTP 400대 오류와 500대 오류의 차이를 설명해보세요.
+HTTP 400대 오류는 클라이언트 오류로, 문제의 원인이 클라이언트에 있음을 나타냅니다. 같은 요청을 여러 번 보내도 성공하지 않을 가능성이 높습니다. HTTP 500대 오류는 서버 오류로, 문제의 원인이 서버에 있음을 나타냅니다. 같은 요청을 여러 번 보내면 다른 결과가 나올 수 있습니다.
 
-### 43. 인덱스
-검색 속도 향상을 위한 자료구조.  
-> 단, 저장공간/갱신 비용 증가.
+30. 포트란 무엇인가요? 그 중에서 웰 노운 포트는 무엇인가요?
+포트는 특정 호스트의 애플리케이션을 식별하기 위한 정보입니다. 포트 번호의 유형에는 일반적인 프로토콜이 주로 사용하는 포트 번호를 나타내는 웰 노운 포트가 있으며, 이는 0~1023번 포트입니다.
 
-### 44. Stored Procedure
-DB 내에 저장된 **SQL 블록**으로 재사용 가능.
+31. ICMP는 어디에 사용되는 프로토콜인가요?
+네트워크를 진단한 정보를 확보하거나 오류를 보고하기 위해 사용됩니다. ICMP를 사용하는 대표적인 명령어로 ping이 있습니다. ping은 네트워크 도달 가능성을 알 수 있는 대표적인 명령어입니다.
 
-### 45. Join
-| 종류 | 설명 |
-|------|------|
-| Inner | 교집합 |
-| Left/Right Outer | 한쪽 테이블 기준 포함 |
-| Full Outer | 전체 포함 |
+32. TCP의 혼잡 제어에 대해 설명해보세요.
+네트워크 내 처리할 패킷이 많아 패킷이 유실될 확률이 높은 상황을 혼잡하다고 합니다. TCP는 이러한 네트워크 혼잡 상황을 제어할 수 있는 혼잡 제어 알고리즘을 제공합니다. 대표적으로 느린 시작, 혼잡 회피 등이 있습니다. 이러한 알고리즘은 혼잡 윈도우라고 불리는 변수를 사용하는, 혼잡 윈도우는 송신자가 네트워크로 데이터를 보낼 수 있는 최대 양을 나타냅니다.
 
-### 46. HAVING 절
-GROUP BY 이후 결과에 조건을 적용.
+33. 잘 되던 인터넷이 갑자기 안될 경우 대처 방법을 차근차근 설명해보세요.
+①물리적 연결 확인, ②방화벽 및 보안 프로그램 검토, ③재부팅 가능 여부 확인, ④외부연결 확인: ping을 구글 public dns (8.8.8.8)에 보내본다. ⑤내부연결 확인: ping을 라우터(공유기)에 전송해본다.
 
-### 47. ON DELETE CASCADE
-외래키 제약조건으로 **부모 삭제 시 자식 자동 삭제**.
+34. 트래픽이 과도하게 몰릴 경우 웹 서버를 어떻게 구성하면 좋을까요?(중요)
+로드 밸런서를 도입하여 트래픽을 여러 웹 서버로 분산합니다. 오토 스케일링을 통해서도 부하를 분산할 수 있으므로, 간으하다면 오토 스케일링을 통해 자동으로 스케일 아웃 되도록 구성합니다. 정적 콘텐츠(이미지, 자바 스크립트, CSS 등)에 대한 캐싱을 활성화하여 동일한 콘텐츠를 반복적으로 생성하는 대신 클라이언트에게 캐시된 버전을 제공합니다. DB를 사용할 경우 이 또한 이중화합니다.
 
-### 48. View
-SELECT 결과를 **가상의 테이블**로 제공.
+35. HTTP의 캐시를 검증하기 위한 방법을 설명해보세요.
+If-None-Match 헤더를 통해 Etag를 검사하는 방법이 있고, If-Modified-Since 헤더를 통해 Last-Modified를 검사하는 방법이 있습니다. 304 Not Modified를 응답받을 경우 캐시된 데이터를 활용해도 무방합니다.
 
-### 49. ACID
-원자성, 일관성, 격리성, 지속성.
+36. Connection: keep-alive 헤더가 의미하는 것은 무엇인가요?
+HTTP의 지속 연결을 나타냅니다. 지속 연결이란 하나의 TCP 연결을 통해 여러 요청-응답 메시지를 주고받을 수 있는 기능을 의미합니다.
 
-### 50. SQL 언어 유형
-| 유형 | 설명 |
-|------|------|
-| DDL | 구조 정의 (CREATE, DROP) |
-| DML | 데이터 조작 (SELECT, INSERT) |
-| DCL | 권한 제어 (GRANT, REVOKE) |
+37. IPv4가 있는데 IPv6가 생긴 이유는 무엇인가요?
+IPv4는 32bit 크기의 주소를 활용하여 약 43억개의 주소를 제공할 수 있습니다. 이는 전세계 호스트에 할당 가능할 만큼 넉넉한 개수가 아니기 때문에 128비트 주소 공간을 가진 IPv6가 등장한 것입니다.
++ 그러면 왜 아직까지 IPv4가 더 많이 사용되나요?: 하나의 공유 IP주소를 여러개의 사설 IP주소가 이용할 수 있다.
 
----
+38. UDP가 TCP보다 빠른 이유는?
+TCP와 달리 연결을 수립하는 과정이 없고, 데이터의 순서를 보장할 필요가 없으며, 흐름제어 및 혼잡 제어의 알고리즘을 적용할 필요도 없습니다.(연결성도 신뢰성도 보장할 필요가 없습니다.)
 
-## 📚 참고
-- FastCampus 기술면접 수업  
-- Upstage AI Lab Bootcamp 자료  
+39. 쿠키는 보안에 민감한가요? 만일 그렇다면 쿠키의 보안성을 향상할 수 있는 방법은?
+네, 그렇기에 쿠키에는 민감한 개인정보를 저장하지 않는 것이 좋습니다. 이를 보완하기 위해 Secure 플래그를 사용하여 HTTPS에서만 쿠키를 사용하도록 하거나 HttpOnly 플래그를 통해 자바 스크립트를 통한 쿠키 접근을 막을 수 있습니다.
 
----
+40. HTTP 메서드 중 PUT와 PATCH의 차이를 설명해보세요.
+PUT은 자원을 대체하기 위한 요청 메서드입니다. 메시지 본문으로 덮어쓰기하는 것과 같습니다. PATCH는 자원에 대한 부분 수정을 위한 요청 메서드입니다.
 
-> _#패스트캠퍼스 #UpstageAILab #기술면접 #AI부트캠프_
+
+(3) 데이터베이스
+
+41. 꽌계형 데이터베이스(RDBMS)와 NoSQL의 차이를 설명해보세요.
+관계형 데이터베이스는 데이터를 테이블형태로 저장하는 데이터베이스입니다. 테이블은 행과 열로 구성되어 있으며, 행은 각 데이터 레코드를 나타냅니다. 관계형 데이터베이스를 다루기 위해 흔히 SQL이 사용됩니다. 반면 NoSQL은 RDB와 달리 데이터의 구조를 자유롭게 설정할 수 있는 데이터베이스입니다. 대용량의 비정형 데이터에 적합합니다.
+
+42. 트랙잭션의 원자성이란 무엇이며, 그를 왜 보장해야 하나요?
+원자성이란 트랜잭션이 성공적으로 완료되거나 완전히 실패해야 한다는 것을 의미합니다. 즉, 트랜잭션의 모든 작업이 성공적으로 완료되거나, 모든 작업이 실패해야 합니다. 이는 데이터베이스의 데이터를 일관되게 유지하기 위함입니다.
+
+43. 데이터베이스에서 인덱스를 사용하는 이유는 무엇인가요?
+인덱스란 데이터베이스 테이블에 대한 검색 성능을 향상시키기 위한 자료구조입니다. 그러나 인덱스를 생성하고 저장하는데 비용, 용량이 소요된다. 또한 조회가 적은 데이터에 대해서는 성능이 저하될 수 있습니다.
+
+44. Stored Procedure란 무엇인가요?
+데이터베이스에서 실행할 수 있는 일련의 SQL 문을 포함하는 모듈화된 SQL 쿼리 블록입니다. 사전에 정의되고 저장되며, 필요할 때 호출하여 실행할 수 있습니다.
+
+45. Inner Join과 Outer Join을 설명하세요.
+양자는 데이터베이스에서 테이블의 데이터를 결합하는데 사용되는 SQL 연산자입니다. Inner Join은 2개 이상의 테이블에서 공통 열을 기반으로 합치는 방식으로 교집합과 유사합니다. Outer Join은 두 테이블 간의 데이터를 결합하되, 일치하지 않는 행도 결과에 포함시키는 방식입니다. Outer Join에는 Left Outer Join, Right Outer Join, Full Outer Join이 있습니다.
+
+46. SQL 문 중 Having 절은 무엇인가요?
+GROUP BY절에 의해 그룹화된 데이터를 검색하기 위한 조건을 지정하는 절입니다. HAVING 절은 WHERE 절과 유사하지만, WHERE 절은 테이블의 개별 행을 검색하기 위한 조건을 지정하는 반면, HAVING 절은 그룹화된 데이터를 검색하기 위한 조건을 지정한다는 점에서 차이가 있습니다.
+
+47. 회원 테이블에서 회원을 삭제하면 회원이 작성한 글도 함께 글 테이블에서 삭제하고 싶습니다. 테이블을 어떻게 설계하면 좋을까요?
+글 테이블 열이 회원 테이블의 행을 참조하도록 외래키를 설계합니다. 또한 on delete cascade로 회원 테이블의 행이 삭제되면 연쇄적으로 삭제되도록 제약조건을 추가합니다.
+
+48. 뷰는 무엇인가요? 사용하는 이유는 무엇인가요?
+데이터베이스의 뷰는 SELECT 문의 결과로 만든 가상의 테이블입니다. 이는 실제 테이블은 아니지만 사용자에게 편리하고 직관적인 인터페이스를 제공하기 위해 사용됩니다.
+
+49. ACID가 무엇인지 설명해보세요.(중요)
+데이터베이스의 트랜젝션이 지켜야할 성질입니다. 각각 원자성, 일관성, 격리성, 지속성을 의미합니다.
+
+50. DDL, DCL, DML에 대해 설명해보세요.
+관계형 데이터베이스를 다루기 위한 언어인 SQL을 세 유형으로 나눈 것이다. DDL은 데이터베이스의 구조를 정의하는 언어입니다. DCL은 데이터베이스 자체를 조작하거나 그에 대한 권한을 관리하는 언어입니다. DML은 데이터베이스의 데이터를 조작하는 언어입니다.
+
+참고
+fastcampus 기술면접 수업
+#패스트캠퍼스 #패스트캠퍼스AI부트캠프 #업스테이지패스트캠퍼스 #UpstageAILab #국비지원 #패스트캠퍼스업스테이지에이아이랩 #패스트캠퍼스업스테이지부트캠프
+﻿
